@@ -1,3 +1,9 @@
+2006-06-29  Jeroen Frijters <jeroen@sumatra.nl>
+
+	* java/lang/Thread.java:
+	(getState()): Handle case of no VMThread
+	correctly.
+
 2006-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/Thread.java,
